Doc/force-app/main/default/objects/Order/fields/SFA_Override__c.field-meta.xml
<CustomField>
    <fullName>SFA_Override__c</fullName>
    <description>Twin field from Quote to capture SFA% Override value. BIZ-72344</description>
    <label>SFA% Override</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>