Doc/force-app/main/default/objects/Order/fields/Ship_To_Default__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Default__c</fullName>
    <description>Created as part of BIZ-64701</description>
    <formula>Ship_To_Address__r.Default_Shipping_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Default</label>
    <type>Checkbox</type>
</CustomField>