Doc/force-app/main/default/objects/Order/fields/Shipping_Attention__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Attention__c</fullName>
    <label>Shipping Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>