Doc/force-app/main/default/objects/Order/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <description>Populate Subsidiary value from related contract created as part of BIZ-47396 story</description>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subsidiary</valueSetName>
    </valueSet>
</CustomField>