Doc/force-app/main/default/objects/Order/fields/Sync_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-49325</description>
    <label>Sync NetSuite</label>
    <type>Checkbox</type>
</CustomField>