Doc/force-app/main/default/objects/Order/fields/Total_Billings_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Billings_USD__c</fullName>
    <description>The total billing for this order in terms of USD</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billings (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>