Doc/force-app/main/default/objects/Order/fields/Total_Contract_Years__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Years__c</fullName>
    <description>Custom Field built according to US# BIZ-47145</description>
    <formula>IF( ISBLANK( SBQQ__Quote__r.First_Segment_Months__c ) ,  (SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)  / 12,  ((SBQQ__Quote__r.SBQQ__SubscriptionTerm__c  -  SBQQ__Quote__r.First_Segment_Months__c) / 12) + 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>